k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saasthi
  labels:
    app.kubernetes.io/name: saasthi
    app.kubernetes.io/part-of: saasthi-mch
